# Hosts-File-Editor

./: .gitignore  CMakeLists.txt  README.md  app.aps  helper.h  mainwindow.cpp  mainwindow.ui  newhostdialog.h  newhostdialog.ui  resources.qrc  selfsignedcert.pfx
package/: AppxManifest.xml  resources.pri  resources.scale-125.pri  resources.scale-150.pri  resources.scale-200.pri  resources.scale-400.pri
src/: HostModel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  newhostdialog.cpp
